--- a/main.html
+++ b/main.html
@@ -1,3 +1,13 @@
+<!DOCTYPE HTML>
+<html lang="ja">
+<head>
+   <title>３年２組　スロットゲーム</title>
+</head>
+  <body  onload="hyouji();">
+    <noscript>
+      <p>Java Scriptを有効にしてください。</p>
+    </noscript>
+    
 <body>
   <div class="game">
     <p>得点:<span id="score">0</span>&emsp;レベル:<span id="level">1</span></p>
