--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="ja">
 <head>
-   <title>３年２組　スロットゲーム</title>
+   <title>スロットゲーム</title>
 </head>
   <body  onload="hyouji();">
     <noscript>
